--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!-- u032 website.
+Copyright (C) 2022 u032
+u032 is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+u032 is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+You should have received a copy of the GNU General Public License
+along with u032. If not, see https://www.gnu.org/licenses/. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who Is u032?</title>
+    <title>Who Is u032?</title> 
 </head>
 <body>
     <div style="display: block;margin-top:30ex; margin-bottom: 3ex; justify-self: center;">
