--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ along with u032. If not, see https://www.gnu.org/licenses/. -->
             </a>
     </div>
 
-    <footer class="footer">
+    <footer>
         <div class="content has-text-centered">
           <p>
             <strong><a href="https://discord.gg/NgFr7jN56M">Discord</a></strong> |
