--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ along with u032. If not, see https://www.gnu.org/licenses/. -->
     <title>Who Is u032?</title> 
 </head>
 <body>
-    <div class="top" style="display: block;margin-top:23ex; margin-bottom: 3ex; justify-self: center;">
+    <div class="top" style="display: block; margin-bottom: 3ex; justify-self: center;">
         <img src="https://cdn.discordapp.com/avatars/922205787630219306/0c255086810c3294d1c81bfb76742f20.png?size=256" alt="" srcset="" style="width: 200px; border: 5px solid #5099c2; border-radius: 100px;display: flex;margin: 1ex auto;">
         <p style="text-align: center;font-size: 2.8ex;top:2ex">Software developer and OSS enjoyer</p>
     </div>
